added CD endpoints
