# routes/index.js
@@ -6,4 +6,6 @@ router.get('/', (req, res) => {
     res.send("Hello World");
 });
 
+router.use('/cds', require('./cd'))
+
 module.exports = router;
